http://srv-jira.bft.local:8087/browse/BC-3550 Оффлайн-клиент - Неверное наименование полей на вкладке "Подписи"